# shooter

./: .gitignore  DockerFile  README.md  setup.cfg  setup.py
space_invader/: Bullets.py  Enemies.py  Game_engine.py  Guns.py  Menus.py  Misc_objects.py  Playership.py  android.txt  constants.py  credits.kv  enemies.py  engine.py  game_ui.py  guns.py  main.py  map.kv  map.py  menu.kv  menu.py  misc_objects.py  playership.py  shooter.kv  spaceship.py  style.kv  utils.py
space_invader/img/: space_invader.atlas  to_atlas.bat
