[metadata]
name = space_invader
version = 0.2.0
description = "Top-Down space shooter game."
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  kivy == 1.10.1
